<resources>
    <string name="prefs_file">com.example.carritocompracompartido.PREFERENCE_FILE_KEY</string>
    <string name="default_web_client_id">864842660900-78mae1g5bv0ehgs33kuck2i27vgl0ct4.apps.googleusercontent.com</string>
    <string name="app_name">SharedShoppingCart</string>
    <string name="edit">Edit</string>
    <string name="home">Home</string>
    <string name="logout">Log Out</string>
    <string name="profile">Profile</string>
    <string name="list_name_hint">List Name</string>
    <string name="emails_hint">Invited Users Emails</string>
    <string name="edit_list_title">Edit List</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="list_updated">List updated</string>
    <string name="error_updating_list">Error updating list</string>
    <string name="list_name_empty">The list name cannot be empty</string>
    <string name="no_name">No name</string>
    <string name="product">product</string>
    <string name="products">products</string>
    <string name="add_product">Add Product</string>
    <string name="add">Add</string>
    <string name="purchased">Purchased</string>
    <string name="to_buy">To Buy</string>
    <string name="add_list">Add List</string>
    <string name="select_language">Select Language</string>
    <string name="select_theme">Select Theme</string>
    <string name="product_name_hint">Product Name</string>
    <string name="added_items">Added Items</string>
    <string name="product_exists">Product already exists</string>
    <string name="enter_quantity">Enter quantity</string>
    <string name="invalid_quantity">Invalid quantity</string>
    <string name="delete_product">Delete Product</string>
    <string name="confirm_delete_product">Are you sure you want to delete this product?</string>
    <string name="delete">Delete</string>
    <string name="leave_list">Leave List</string>
    <string name="list_deleted">List deleted</string>
    <string name="error_deleting_list">Error deleting list</string>
    <string name="current_users">Current Users</string>
    <string name="email_not_exist">The email %s does not exist</string>
    <string name="emails_not_exist">The emails %s do not exist</string>
    <string name="profile_image">Profile Image</string>
    <string name="change_profile_image">Change Profile Image</string>
    <string name="profile_image_updated">Profile image updated successfully</string>
    <string name="profile_image_update_failed">Failed to update profile image</string>
    <string-array name="languages">
        <item>es</item>
        <item>eu</item>
        <item>en</item>
    </string-array>
    <string-array name="themes">
        <item>Light</item>
        <item>Dark</item>
        <item>System</item>
    </string-array>
</resources>
